<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">童樂</string>
    <string name="weekend">周末</string>
    <string name="free">免費</string>
    <string name="hot">熱門</string>
    <string name="near">附近</string>
    <string name="recommand">推薦</string>
    <string name="search">尋找</string>
    <string name="region">地區</string>
    <string name="calendar">日曆</string>
    <string name="category">類型</string>
    <string name="collection">收藏</string>
    <string name="share">分享</string>
    <string name="time">時間:</string>
    <string name="address">地點:</string>
    <string name="price">價錢:</string>
    <string name="tel">電話:</string>
    <string name="website">網址:</string>
    <string name="holder">主辦單位:</string>
    <string name="onsale_01">超級</string>
    <string name="onsale_02">優惠</string>
    <string name="description">更多描述</string>
    <string name="extend">展開看更多</string>
    <string name="fitage">適合年齡:</string>
    <string name="add">恭喜你收藏成功，可以在"我的"裡面找到這些資訊呦</string>
    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="facebook">facebook</string>
    <string name="friends">朋友圈</string>
    <string name="message">簡訊</string>
    <string name="mail">郵件</string>
    <string name="share_title">分享這個資訊</string>
    <string name="interested">感興趣</string>
    <string name="man">人</string>
    <string name="loading">載入中</string>
    <string name="not_logon">未登入</string>
    <string name="no_weekend">本周沒活動</string>
    <string name="no_free">都要錢的</string>
    <string name="no_hot">都冷門</string>
    <string name="no_near">都很遠</string>
    <string name="network_error">網路發生錯誤</string>
    <string name="server_error">server他不行了</string>
    <string name="my_baby">我的寶貝</string>
    <string name="mine">我的</string>
    <string name="friend">朋友</string>
    <string name="footprint">足跡</string>
    <string name="all">全部</string>
    <string name="alltime">不限時間</string>
    <string name="allplace">全部地點</string>
    <string name="all_category">全部類型</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="keyword_find">關鍵字尋找</string>
    <string name="today">今天</string>

    <string-array name="regions">
        <item>台北市</item>
        <item>新北市</item>
        <item>桃園市</item>
        <item>台中市</item>
        <item>台南市</item>
        <item>高雄市</item>
        <item>宜蘭縣</item>
        <item>新竹縣</item>
        <item>苗栗縣</item>
        <item>彰化縣</item>
        <item>南投縣</item>
        <item>雲林縣</item>
        <item>嘉義縣</item>
        <item>屏東縣</item>
        <item>台東縣</item>
        <item>花蓮縣</item>
        <item>澎湖縣</item>
        <item>基隆市</item>
        <item>新竹市</item>
        <item>嘉義市</item>
        <item>金門縣</item>
        <item>連江縣</item>
    </string-array>
    <string-array name="category">
        <item>美感</item>
        <item>體能</item>
        <item>科普</item>
        <item>社交</item>
        <item>文化</item>
    </string-array>

</resources>