<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="46.67dp"
    android:background="@android:color/white" >

    <Button
        android:id="@+id/btn01"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/recommand"
        android:textColor="@color/footer"
        android:textSize="@dimen/font_01" />

    <Button
        android:id="@+id/btn02"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/search"
        android:textColor="@color/footer"
        android:textSize="@dimen/font_01" />

    <Button
        android:id="@+id/btn03"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/mine"
        android:textColor="@color/footer"
        android:textSize="@dimen/font_01" />

    <Button
        android:id="@+id/btn04"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:text="@string/mine"
        android:textColor="@color/footer"
        android:textSize="@dimen/font_01" />

</LinearLayout>